--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,7 +1,3 @@
-
-
-
-
 <div class="main-content">
   <div class="container-fluid">
     <div class="row">
@@ -18,26 +14,14 @@
               </label>
               <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
             </div>
-              <!-- <ngb-carousel *ngIf="images" [showNavigationArrows]="showNavigationArrows"
-               [showNavigationIndicators]="showNavigationIndicators">
-                <ng-template ngbSlide>
-                  <div  *ngFor="let image of images" >
-                    <img [src]="sanitizeImageUrl(image)" alt="Random slide">
-                  </div>
-                </ng-template>
-              </ngb-carousel>   -->
-              <ngb-carousel *ngIf="images" [showNavigationArrows]="showNavigationArrows" [showNavigationIndicators]="showNavigationIndicators">
-                <ng-template ngbSlide *ngFor="let image of images">
-                  <div class="picsum-img-wrapper">
-                    <img [src]="sanitizeImageUrl(image)" alt="Random slide">
-                  </div>
-                  <div class="carousel-caption">
-                    <h3>No mouse navigation</h3>
-                    <p>This carousel hides navigation arrows and indicators.</p>
-                  </div>
-                </ng-template>
-              </ngb-carousel>                 
-            
+            <ngb-carousel *ngIf="images" [showNavigationArrows]="showNavigationArrows"
+              [showNavigationIndicators]="showNavigationIndicators">
+              <ng-template ngbSlide *ngFor="let image of images">
+                <div class="picsum-img-wrapper">
+                  <img [src]="sanitizeImageUrl(image)" alt="Random slide">
+                </div>
+              </ng-template>
+            </ngb-carousel>
           </div>
         </div>
       </div>
