--- a/src/app/users/user.component.html
+++ b/src/app/users/user.component.html
@@ -116,7 +116,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <label class="bmd-label-floating">Gender</label>
-            <select id="inputState" class="form-control" formControlName="genderId">
+            <select id="genderId" class="form-control" formControlName="genderId">
               <option selected [value]='0'>Choose...</option>
               <option *ngFor="let value of Gender" [value]='value.id'>{{value.name}}</option>
             </select>
@@ -222,7 +222,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <label class="bmd-label-floating">School</label>
-            <select id="inputState" class="form-control" formControlName="schoolId">
+            <select id="schoolId" class="form-control" formControlName="schoolId">
               <option selected [value]='0'>Choose...</option>
               <option *ngFor="let value of SchoolsList" [value]='value.schoolId'>{{value.name}}</option>
             </select>
@@ -235,7 +235,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <label class="bmd-label-floating">User Type</label>
-            <select id="inputState" class="form-control" formControlName="categoryId">
+            <select id="categoryId" class="form-control" formControlName="categoryId">
               <option selected [value]='0'>Choose...</option>
               <option *ngFor="let value of typeValues" [value]='value.id'>{{value.name}}</option>
             </select>
