new changes added check it  once

--- a/src/app/holidays/holidays.component.html
+++ b/src/app/holidays/holidays.component.html
@@ -114,7 +114,7 @@
   <div class="modal-body">
     <p>
       <strong>Are you sure you want to delete
-        <span class="text-primary">Holiday: {{deletionleave.description}}
+        <span class="text-primary">Holiday: {{deletionHoliday.description}}
         </span> ?</strong>
     </p>
     <p>All information associated with this will be permanently deleted.
