--- a/src/app/leaves/leaves.component.html
+++ b/src/app/leaves/leaves.component.html
@@ -131,7 +131,7 @@
   <div class="modal-body">
     <p>
       <strong>Are you sure you want to delete
-        <span class="text-primary">Leave: {{deletionHoliday.description}}
+        <span class="text-primary">Leave: {{deletionleave.description}}
         </span> ?</strong>
     </p>
     <p>All information associated with this will be permanently deleted.
