--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -42,7 +42,8 @@
                   <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
                     attr.aria-valuenow="{{ progressInfo.value }}" aria-valuemin="0" aria-valuemax="100"
                     [ngStyle]="{ width: progressInfo.value + '%' }">
-                    {{ progressInfo.value }}%
+                    {{
+                       progressInfo.value }}%
                   </div>
                 </div>
               </div> -->
